# TokenGS

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  release_2026.6.md
acc_configs/: gpu8.yaml
data/: DATA.md
scripts/: render_kubric_dyn.py
tests/: test_tokengs_contracts.py
tokengs/: evaluate.py  options.py  train.py
tokengs/data/: __init__.py  datafield.py  provider.py  registry.py  sampler.py
tokengs/data/dynamic/: __init__.py  kubric.py
tokengs/data/static/: dl3dv.py
tokengs/models/: __init__.py  activations.py  attention.py  enc_dec.py  input_types.py  losses.py  tokengs.py
tokengs/rendering/: __init__.py  fused_ssim.py  gs.py
tokengs/utils/: __init__.py  augmentation.py  data.py  gaussians.py  images.py  metrics.py  training.py
